@@ -1,0 +1,9 @@
+<html>
+<body>
+<p>A url filter plugin that validates given urls.</p>
+<p>This plugin runs a series of tests for the given url to make sure that given
+url is valid and 'fetchable'.</p>
+<p>Note: This plugin should <b>only</b> be used for web-related protocols such
+as http, https and ftp.</p>
+</body>
+</html>
