@@ -131,6 +131,8 @@ Unreleased changes (1.0-dev)
 
 44. NUTCH-550 - Parse fails if db.max.outlinks.per.page is -1. (dogacan)
 
+45. NUTCH-546 - file URL are filtered out by the crawler. (dogacan)
+
 Release 0.9 - 2007-04-02
 
  1. Changed log4j confiquration to log to stdout on commandline
